# homework_10

./: .coverage  .env  README.md  log.txt  main.py  pyproject.toml
htmlcov/: .gitignore  class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_data_conversion_py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: bank_operations_filter.py  data_conversion.py  decorators.py  external_api.py  generators.py  log.txt  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_data_conversion.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
